--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 #conimg {
-  background-image:url(/images/banner.png);
+  background-image:url(/images/banner2.png);
   background-position:center;
   
 }
