--- a/css/style.css
+++ b/css/style.css
@@ -76,23 +76,23 @@ header .container {
 /* BUTTONS */
 
 .btn {
-  display: inline-block;
-  padding: 1rem 2rem;
-  background: var(--btn-bg-color);
-  color: #311348;
-  font-family: var(--font-secondary);
-  font-style: italic;
-  font-weight: bold;
-  font-size: 1rem;
-  text-transform: capitalize;
-  transition: all 0.3s ease;
-  box-shadow: 4px 4px 0 0 #311348;
-  cursor: pointer;
-  position: relative;
-  text-decoration: none;
-  outline: none;
-}
+    display: inline-block;
+    padding: 1rem 2rem;
+    background: var(--btn-bg-color);
+    color: #fff;
+    font-family: var(--font-secondary);
+    font-style: italic;
+    font-weight: bold;
+    font-size: 1rem;
+    text-transform: capitalize;
+    transition: all 0.3s ease;
+    box-shadow: 4px 4px 0 0 white;
+    cursor: pointer;
+    position: relative;
+    text-decoration: none;
+    outline: none;
 
+}
 
 
 .btnn {
@@ -128,7 +128,7 @@ header .container {
 .hero-btn {
   border-radius: 4px;
   font-size: 1.2rem;
-  padding: 1.5rem 3rem;
+  padding: 0.5rem 1rem;
 }
 
 /* COUNTDOWN SECTION */
