--- a/css/style.css
+++ b/css/style.css
@@ -76,21 +76,21 @@ header .container {
 /* BUTTONS */
 
 .btn {
+        COLOR: WHITE;
     display: inline-block;
     padding: 1rem 2rem;
-    background: var(--btn-bg-color);
-  
+    /* background: var(--btn-bg-color); */
     font-family: var(--font-secondary);
     font-style: italic;
-    font-weight: bold;
     font-size: 1rem;
     text-transform: capitalize;
     transition: all 0.3s ease;
-    box-shadow: 4px 4px 0 0 white;
+    box-shadow: 4px 4px 0 0 WHITE;
     cursor: pointer;
     position: relative;
     text-decoration: none;
     outline: none;
+  BACKGROUND-COLOR: BLACK;
 
 }
 
@@ -120,9 +120,10 @@ header .container {
 }
 
 .wallet-btn {
-  border-radius: 5rem;
-  margin-left: 2rem;
-  border-color: transparent;
+     border-radius: 5rem;
+    margin-left: 2rem;
+    border-color: transparent;
+    BACKGROUND: BLACK;
 }
 
 .hero-btn {
