--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ header .container {
 .wallet-btn {
      border-radius: 5rem;
     margin-left: 2rem;
-    border-color: transparent;
+   border-color: white;
     BACKGROUND: BLACK;
 }
 
