--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 #conimg {
-  background-image:url(/images/banner2.png);
+  background-image:url(/images/banner.png);
   background-position:center;
   background-size: cover;
 }
