--- a/css/style.css
+++ b/css/style.css
@@ -193,8 +193,8 @@ section {
 }
 
 .countdown p {
-  font-size: 1.2rem;
-  font-family: var(--font-secondary);
+  font-size: 1.4rem;
+  font-family: sans-serif;
   margin-bottom: 2rem;
   text-align: center;
 }
