--- a/css/awac-30603b.webflow.css
+++ b/css/awac-30603b.webflow.css
@@ -2140,11 +2140,11 @@ figcaption {
 }
 
 .page-padding.bg {
-  background-image: url('../images/banner.png');
-  background-position: 50% 8%;
-  background-size: 1243px;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-image: none;
+  background-position: 0px 0px;
+  background-size: auto;
+  background-repeat: repeat;
+  background-attachment: scroll;
 }
 
 .text-align-right {
@@ -2490,7 +2490,13 @@ figcaption {
 }
 
 .text-size-medium.text-color-grey {
-  color: #d5d6d6;
+  position: relative;
+  top: -32px;
+  color: #fff;
+}
+
+.text-size-medium.text-color-grey.ten {
+  color: transparent;
 }
 
 .icon-small {
@@ -2733,7 +2739,11 @@ figcaption {
 }
 
 .button {
-  padding: 0.75rem 2rem;
+  position: relative;
+  top: 31px;
+  padding-right: 2rem;
+  padding-bottom: 0.75rem;
+  padding-left: 2rem;
   border-radius: 100px;
   background-color: #fff;
   -webkit-transition: all 200ms ease;
@@ -3153,6 +3163,7 @@ figcaption {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  margin-top: -45px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -3162,6 +3173,15 @@ figcaption {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.home-header_component.bg {
+  height: 220px;
+  background-image: url('../images/banner.png');
+  background-position: 50% 90%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
 }
 
 .button-row {
@@ -3771,6 +3791,7 @@ figcaption {
 .footer_credit-text {
   color: rgba(255, 255, 255, 0.75);
   font-size: 0.875rem;
+  text-align: center;
 }
 
 .footer_bottom-link {
@@ -4097,6 +4118,8 @@ figcaption {
 }
 
 .italic-text {
+  position: relative;
+  top: -30px;
   font-style: italic;
 }
 
@@ -4105,6 +4128,153 @@ figcaption {
   font-style: normal;
   font-weight: 400;
   text-align: center;
+}
+
+.image-3 {
+  position: relative;
+  left: 400px;
+  top: 60px;
+  display: block;
+  text-align: center;
+}
+
+.slide {
+  background-color: #101111;
+}
+
+.heading-2 {
+  position: relative;
+  left: 600px;
+  right: 0px;
+  bottom: 117px;
+  width: 200px;
+  font-family: 'Open Sans', sans-serif;
+  font-style: normal;
+  text-align: center;
+}
+
+.heading-2.tex {
+  left: 160px;
+  bottom: 60px;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 460px;
+  font-size: 1rem;
+  text-align: left;
+}
+
+.slider {
+  background-color: #101111;
+}
+
+.image-4 {
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  right: auto;
+  bottom: 0%;
+  display: block;
+  margin-bottom: -7px;
+  margin-left: 352px;
+  padding-left: 0px;
+  float: none;
+  clear: none;
+  text-align: center;
+}
+
+.image-5 {
+  margin: 42px 0px 8px 396px;
+  padding-right: 0px;
+}
+
+.heading-3 {
+  width: 100px;
+  margin-top: -7.7rem;
+  margin-left: 590px;
+}
+
+.image-6 {
+  margin-left: 360px;
+}
+
+.heading-4 {
+  position: absolute;
+  top: -30px;
+  display: inline-block;
+  margin-bottom: auto;
+  padding-top: 0px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.columns {
+  padding-top: 0px;
+  padding-bottom: 13px;
+}
+
+.heading-5 {
+  display: inline-block;
+  padding-top: 24px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.heading-6 {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.heading-7 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  text-transform: capitalize;
+}
+
+.ws {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+}
+
+.heading-8 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+}
+
+.bold-text {
+  font-weight: 400;
+}
+
+.bold-text-2 {
+  font-weight: 400;
+}
+
+.bold-text-3 {
+  font-weight: 400;
+}
+
+.bold-text-4 {
+  font-weight: 400;
+}
+
+.heading-9 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+}
+
+.heading-10 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+}
+
+.heading-11 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+}
+
+.heading-12 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+}
+
+.heading-13 {
+  font-family: 'Open Sans', sans-serif;
 }
 
 @media screen and (max-width: 991px) {
@@ -4941,8 +5111,16 @@ figcaption {
     max-width: none;
   }
 
+  .text-size-medium.text-color-grey {
+    top: 36px;
+  }
+
   .button-row-grid.mobile-1-col {
     grid-auto-flow: row;
+  }
+
+  .button {
+    top: 77px;
   }
 
   .stylesystem-images_layout {
@@ -5020,6 +5198,20 @@ figcaption {
   .button-3 {
     width: 90px;
     height: 10px;
+  }
+
+  .italic-text {
+    top: 42px;
+  }
+
+  .image-5 {
+    margin-top: 105px;
+    margin-left: 71px;
+  }
+
+  .heading-3 {
+    margin-top: -5.1rem;
+    margin-left: 188px;
   }
 }
 
@@ -5111,6 +5303,38 @@ figcaption {
   align-self: stretch;
 }
 
+#w-node-ea8d3004-b55f-8628-8d7f-3d065e0ccd49-ceb748e5 {
+  -ms-grid-row: span 1;
+  grid-row-start: span 1;
+  -ms-grid-row-span: 1;
+  grid-row-end: span 1;
+  -ms-grid-column: span 1;
+  grid-column-start: span 1;
+  -ms-grid-column-span: 1;
+  grid-column-end: span 1;
+}
+
+#w-node-ea8d3004-b55f-8628-8d7f-3d065e0ccd52-ceb748e5 {
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  -ms-grid-row-align: stretch;
+  align-self: stretch;
+}
+
+#w-node-eb66a4b9-f952-680e-39e8-1dadc0004453-ceb748e5 {
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  -ms-grid-row-align: stretch;
+  align-self: stretch;
+}
+
+#w-node-_85d02215-4670-8914-939e-a37e6d1249b6-ceb748e5 {
+  -webkit-align-self: stretch;
+  -ms-flex-item-align: stretch;
+  -ms-grid-row-align: stretch;
+  align-self: stretch;
+}
+
 #w-node-_84c1ae20-c456-3f48-de42-2b7ec9d009a9-84b74902 {
   -ms-grid-row: span 1;
   grid-row-start: span 1;
@@ -5125,19 +5349,6 @@ figcaption {
 #w-node-_84c1ae20-c456-3f48-de42-2b7ec9d009c1-84b74902 {
   -ms-grid-column-align: start;
   justify-self: start;
-}
-
-@media screen and (max-width: 767px) {
-  #w-node-e1dfd3b5-39a9-e48c-dac8-9c89c9a849f3-ceb748e5 {
-    -ms-grid-column-span: 1;
-    grid-column-end: 2;
-    -ms-grid-column: 1;
-    grid-column-start: 1;
-    -ms-grid-row-span: 1;
-    grid-row-end: 5;
-    -ms-grid-row: 4;
-    grid-row-start: 4;
-  }
 }
 
 @font-face {
